# pgx-contrib-spiext

./: Cargo.toml  LICENSE  README.md
src/: catch_error.rs  checked.rs  error.rs  lib.rs  subtxn.rs
tests/: Cargo.toml  tests.control
tests/src/: lib.rs
