[package]
name = "pgx-contrib-spiext"
version = "0.1.0"
edition = "2021"
rust-version = "1.65" # We rely on GAT

[package.metadata]
msrv = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgx = { version = "0.5.6", git = "https://github.com/tcdi/pgx", rev = "4ad8a91" }

[features]
default = []
pub_catch_error = []
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg13 = ["pgx/pg13"]
pg14 = ["pgx/pg14"]
pg15 = ["pgx/pg15"]
