[package]
name = "tests"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10", "pgx-contrib-spiext/pg10" ]
pg11 = ["pgx/pg11", "pgx-tests/pg11", "pgx-contrib-spiext/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12", "pgx-contrib-spiext/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13", "pgx-contrib-spiext/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14", "pgx-contrib-spiext/pg14"]
pg_test = ["debugless-unwrap"]

[dependencies]
pgx = "=0.5.0"
pgx-contrib-spiext = { path = "..", features = ["pub_catch_error"] }
debugless-unwrap = { version = "0.0.4", optional = true }

[dev-dependencies]
pgx-tests = "=0.5.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
